[fix] scrollbar

--- a/src/assets/scss/partials/_general.scss
+++ b/src/assets/scss/partials/_general.scss
@@ -31,7 +31,6 @@ body {
 // For FireFox
 html {
   scrollbar-width: auto;
-  scrollbar-color: #e88735 #181b21;
 }
 body::-webkit-scrollbar {
   width: 4px;
